# notabandoned

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake.yml  rust.yml
assets/music/: config.json  music.json  sounds.json
c_test/: Makefile
c_test/src/: main.c
game/: Cargo.toml
game/src/: main.rs
game_lib/: Cargo.toml
game_lib/src/: game.rs  io.rs  lib.rs  player.rs
jblock/: Cargo.toml
jblock3d/: Cargo.toml
jblock3d/src/: main.rs
server/: Cargo.toml  proto.proto
server/proto/: proto.proto
src/: controller.cpp  controller.h  main.cpp  music.cpp  music.h  player.cpp  player.h  world.cpp  world.h  worldgen.cpp  worldgen.h
src/world/: CMakeLists.txt  block.cpp  block.h  chunk.cpp  chunk.h
windowed_frontend/: Cargo.toml
windowed_frontend/src/: main.rs
